<resources><string name="hello">Hello World, Click Me!</string><string name="app_name">ApplikasjonBoknaden.Droid</string><string name="RegisterActivity_Header">Registrer</string><string name="RegisterActivity_UsernameText">Brukernavn</string><string name="RegisterActivity_EmailText">E-post</string><string name="RegisterActivity_FirstNameText">Navn</string><string name="RegisterActivity_LastNameText">EtterNavn</string><string name="RegisterActivity_PasswordText">Passord</string><string name="RegisterActivity_RepeatPasswordText">Gjenta Passord</string><string name="RegisterActivity_RegisterUserButtonText">Opprett bruker</string><string name="AdItemLayout_Interested">Meld interesse</string><string name="openCamera">Nytt bilde</string><string name="ISBNString">ISBNString</string></resources>