<LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" xmlns:android="http://schemas.android.com/apk/res/android"><LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="60.0dp" android:id="@+id/linearLayout3" android:background="#97004D"><ImageButton android:src="@android:drawable/ic_menu_gallery" android:id="@+id/BackToLoginActivityButton" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_weight="1" /><TextView android:text="@string/RegisterActivity_Header" android:id="@+id/HeaderTextView" android:textSize="@dimen/abc_action_bar_progress_bar_size" android:layout_width="wrap_content" android:layout_height="match_parent" /><Space android:layout_width="66.5dp" android:layout_height="match_parent" android:id="@+id/space2" android:layout_weight="1" /></LinearLayout><ScrollView android:minWidth="25px" android:minHeight="25px" android:layout_width="match_parent" android:layout_height="396.5dp" android:id="@+id/scrollView1" android:fillViewport="true" android:layout_weight="1"><LinearLayout android:orientation="vertical" android:minWidth="25px" android:minHeight="25px" android:layout_width="match_parent" android:layout_height="match_parent" android:id="@+id/linearLayout4" android:layout_weight="1"><LinearLayout android:orientation="vertical" android:minWidth="25px" android:minHeight="25px" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/linearLayoutEmail" android:layout_weight="1"><TextView android:text="@string/RegisterActivity_UsernameText" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/textView1" /><EditText android:inputType="textEmailAddress" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/editTextUsername" /></LinearLayout><LinearLayout android:orientation="vertical" android:minWidth="25px" android:minHeight="25px" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/linearLayoutEmail" android:layout_weight="1"><TextView android:text="@string/RegisterActivity_EmailText" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/textView1" /><EditText android:inputType="textEmailAddress" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/editTextEmail" /></LinearLayout><LinearLayout android:orientation="vertical" android:minWidth="25px" android:minHeight="25px" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/linearLayoutLastName" android:layout_weight="1"><TextView android:text="@string/RegisterActivity_FirstNameText" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/textView1" /><EditText android:inputType="text" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/editTextFirstname" /></LinearLayout><LinearLayout android:orientation="vertical" android:minWidth="25px" android:minHeight="25px" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/linearLayoutFirstName" android:layout_weight="1"><TextView android:text="@string/RegisterActivity_LastNameText" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/textView1" /><EditText android:inputType="textEmailAddress" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/editTextLastname" /></LinearLayout><LinearLayout android:orientation="vertical" android:minWidth="25px" android:minHeight="25px" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/linearLayoutPassword" android:layout_weight="1"><TextView android:text="@string/RegisterActivity_PasswordText" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/textView1" /><EditText android:inputType="textEmailAddress" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/editTextPassword" /></LinearLayout><LinearLayout android:orientation="vertical" android:minWidth="25px" android:minHeight="25px" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/linearLayoutRepeatPassword" android:layout_weight="1"><TextView android:text="@string/RegisterActivity_RepeatPasswordText" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/textView1" /><EditText android:inputType="textEmailAddress" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/editTextRepeatedPassword" /></LinearLayout><Button android:text="@string/RegisterActivity_RegisterUserButtonText" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/RegisterUserButton" android:layout_weight="1" /></LinearLayout></ScrollView></LinearLayout>